Bug 27598 - abidiff mishandles union member functions

abidiff segfaults when a union member function is involved in the
comparison.  This patch fixes that.

	* src/abg-default-reporter.cc (default_reporter::report): Assume
	the parent type of the method can be either a class or a union.
	* tests/data/test-diff-filter/test-PR27598-report-0.txt: New
	reference output for the test.
	* tests/data/test-diff-filter/test-PR27598-v{0,1}.cc: New source
	code for the input binaries below.
	* tests/data/test-diff-filter/test-PR27598-v{0,1}.o: New input
	test binaries.
	* tests/data/Makefile.am: Add the new test material to source
	distribution.
	* tests/test-diff-filter.cc (in_out_specs): Add the test inputs
	above to this test harness.

Signed-off-by: Dodji Seketeli <dodji@redhat.com>