tests/test-diff-filter.cc
@@ -794,6 +794,13 @@ InOutSpec in_out_specs[] =
    "data/test-diff-filter/test-PR27569-report-0.txt",
    "output/test-diff-filter/test-PR27569-report-0.txt",
   },
+    {
+   "data/test-diff-filter/test-PR27598-v0.o",
+   "data/test-diff-filter/test-PR27598-v0.o",
+   "--no-default-suppression",
+   "data/test-diff-filter/test-PR27598-report-0.txt",
+   "output/test-diff-filter/test-PR27598-report-0.txt",
+  },
   // This should be the last entry
   {NULL, NULL, NULL, NULL, NULL}
 };
